Make -mode optional